--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.example</groupId>
     <artifactId>timesystem</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <groupId>org.example.timesystem</groupId>
   <artifactId>timesystem-server</artifactId>
