--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.example</groupId>
     <artifactId>timesystem</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>1.1</version>
   </parent>
   <groupId>org.example.timesystem</groupId>
   <artifactId>timesystem-server</artifactId>
@@ -39,7 +39,7 @@
 		<goal>build</goal>
 	      </goals>
 	      <configuration>
-		<imageName>${owner}/${project.artifactId}:${project.version}</imageName>
+		<imageName>${project.artifactId}:${project.version}</imageName>
 		<dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
 		<resources>
 		  <resource>
@@ -56,7 +56,7 @@
 	      <goal>tag</goal>
 	    </goals>
 	    <configuration>
-	      <image>${owner}/${project.artifactId}:${project.version}</image>
+	      <image>${project.artifactId}:${project.version}</image>
 	      <newName>${owner}/${project.artifactId}:latest</newName>
 	      <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
 	    </configuration>
