--- a/client/src/main/docker/Dockerfile
+++ b/client/src/main/docker/Dockerfile
@@ -1,10 +1,10 @@
 FROM openjdk:8-jre
 MAINTAINER tar@semafor.ch
-#
+# set environment variable
 ENV timeserver timeserver
 #
 ADD  timesystem-client.jar app.jar
-# set modification date
-RUN sh -c 'touch /app.jar'
+# create user and set modification date
+RUN useradd -r default && sh -c 'touch /app.jar'
 # 
 ENTRYPOINT ["java","-jar","/app.jar"]
