--- a/client/src/main/docker/Dockerfile
+++ b/client/src/main/docker/Dockerfile
@@ -1,10 +1,14 @@
 FROM openjdk:8-jre
 MAINTAINER tar@semafor.ch
 #
-ENV timeserver timeserver
+ENV TIMESERVER timeserver
 #
-ADD  timesystem-client.jar app.jar
+WORKDIR /apphome
+COPY  timesystem-client.jar app.jar
 # set modification date
-RUN sh -c 'touch /app.jar'
+RUN sh -c 'touch app.jar'
 # 
-ENTRYPOINT ["java","-jar","/app.jar"]
+RUN groupadd -r timeclient && \
+    useradd -r -g timeclient timeclient
+USER timeclient
+ENTRYPOINT ["java", "-jar","app.jar"]
