--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER tar@semafor.ch
 # working directory for tomcat
 VOLUME /tmp
 #
-ADD  timesystem-server.jar app.jar
+ADD  target/timesystem-server.jar app.jar
 # create user and set modification date
 RUN useradd -r tomcat && sh -c 'touch /app.jar' && chown tomcat /app.jar
 USER tomcat
