--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
   <artifactId>timesystem</artifactId>
-  <version>1.2</version>
+  <version>1.3-snapshot</version>
   <packaging>pom</packaging>
   <name>Dockerized Time System Application</name>
   
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.7.RELEASE</version>
+    <version>2.0.5.RELEASE</version>
   </parent>
 
   <properties>
