--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,9 @@
 FROM openjdk:8
-MAINTAINER tar@semafor.ch
+LABEL maintainer=tar@semafor.ch
 # working directory for tomcat
 VOLUME /tmp
 #
-ADD  target/timesystem-server.jar app.jar
+ADD target/timesystem-server.jar app.jar
 # create user and set modification date
 RUN useradd -r tomcat && sh -c 'touch /app.jar' && chown tomcat /app.jar
 USER tomcat
