--- a/server/pom.xml
+++ b/server/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.example</groupId>
 		<artifactId>timesystem</artifactId>
-		<version>1.4</version>
+		<version>1.5-SNAPSHOT</version>
 	</parent>
 	<groupId>org.example.timesystem</groupId>
 	<artifactId>timesystem-server</artifactId>
