--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,27 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.0.RELEASE</version>
+    <version>2.3.4.RELEASE</version>
   </parent>
 
   <properties>
-    <java.version>1.8</java.version>
-    <owner>ronaldtanner</owner>
+    <image>docker.io/ronaldtanner/${project.artifactId}:${project.version}</image>
   </properties>
-      
+
+  <build>
+  <pluginManagement>
+    <plugins>
+      <plugin> <!-- create docker image 
+        https://github.com/GoogleContainerTools/jib/tree/master/jib-maven-plugin
+	       -->
+	 <groupId>com.google.cloud.tools</groupId>
+	 <artifactId>jib-maven-plugin</artifactId>
+	 <version>2.5.2</version>
+      </plugin>
+    </plugins>
+  </pluginManagement>
+  </build>
+  
   <scm>
     <developerConnection>
       scm:git:https://ronaldtanner@github.com/ronaldtanner/timesystem.git
